tests/helium/screenshots/test_signup_password_match_20251217_160012.txt
Test: test_signup_password_match
Timestamp: 20251217_160012
Error:
Traceback (most recent call last):
  File "/Users/chiragdeora/Developer/production-scheduler/tests/helium/run.py", line 69, in run_single_test
    test_func()
  File "/Users/chiragdeora/Developer/production-scheduler/tests/helium/test_auth.py", line 329, in test_signup_password_match
    password_fields = driver.find_elements_by_css_selector("input[type='password']")
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'WebDriver' object has no attribute 'find_elements_by_css_selector'

